// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders selected correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 60,
        },
        Object {
          "backgroundColor": "#F8F8F8",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "marginHorizontal": 12,
        }
      }
    >
      <svg
        height={24}
        style={Object {}}
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          fill="#42D689"
          r="12"
          style={Object {}}
        />
        <path
          clip-rule="evenodd"
          d="M9.74449 16.6294C9.74581 16.6307 9.74713 16.6321 9.74846 16.6334C10.0609 16.9458 10.5674 16.9458 10.8798 16.6334L18.2336 9.2796C18.5461 8.96718 18.5461 8.46065 18.2336 8.14823C17.9212 7.83581 17.4147 7.83581 17.1023 8.14823L10.3142 14.9363L7.29707 11.9192C6.98465 11.6068 6.47812 11.6068 6.1657 11.9192C5.85328 12.2317 5.85328 12.7382 6.1657 13.0506L9.74449 16.6294Z"
          fill="white"
          fill-rule="evenodd"
          style={Object {}}
        />
      </svg>
    </View>
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#EEEEEE",
          "height": 60,
          "justifyContent": "center",
          "width": 702,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#2E3338",
            "fontSize": 16,
          }
        }
      >
        Example
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders unselected correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 60,
        },
        false,
      ]
    }
  >
    <View
      style={
        Object {
          "marginHorizontal": 12,
        }
      }
    >
      <View
        style={
          Object {
            "borderColor": "#D1D5D8",
            "borderRadius": 12,
            "borderWidth": 2,
            "height": 24,
            "paddingTop": 2,
            "width": 24,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#EEEEEE",
          "height": 60,
          "justifyContent": "center",
          "width": 702,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#2E3338",
            "fontSize": 16,
          }
        }
      >
        Example
      </Text>
    </View>
  </View>
</View>
`;
